<resources>
    <string name="app_name">SI CANGKUL</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pesan">Pesan</string>
    <string name="pasar">Pasar</string>
    <string name="laporan">Pengaduan</string>
    <string name="login">Login</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profil</string>
    <string name="namamenu">menu</string>
    <string name="pecangaan_kulon">\@pecangaan_kulon</string>
    <string name="content_title">Notifikasi SI CANGKUL</string>
    <string name="content_text">Kamu termasuk penerima bansos</string>
    <string name="subtext">Notifikasi</string>
</resources>