<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.desa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pesan"
        android:name="com.example.desa.ui.pesan.PesanFragment"
        android:label="@string/pesan"
        tools:layout="@layout/fragment_pesan" />

    <fragment
        android:id="@+id/navigation_pasar"
        android:name="com.example.desa.ui.pasar.PasarFragment"
        android:label="@string/pasar"
        tools:layout="@layout/fragment_pasar" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="com.example.desa.ui.laporan.LaporanFragment"
        android:label="@string/laporan"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.desa.ui.tampilan.profil.ProfilFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.desa.ui.tampilan.profil.AccountFragment"
        android:label="akun"
        tools:layout="@layout/fragment_account" />
</navigation>